--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,20 +22,31 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    //Test
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+
+    //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
     //AppCompat
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     //GSON
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+
     //Room
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     testImplementation 'android.arch.persistence.room:testing:1.1.1'
     annotationProcessor 'android.arch.persistence.room:compiler:1.1.1'
+
+    //RX
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
 }
