--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
+    //Navigation UI
+    implementation "androidx.navigation:navigation-ui:2.1.0"
+
     //GSON
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
