--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,12 +33,14 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    //AppCompat
+    //Support libs
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'com.google.android.material:material:1.1.0-alpha10'
 
-    //Navigation UI
-    implementation "androidx.navigation:navigation-ui:2.1.0"
+    //Material Drawer
+    implementation "com.mikepenz:materialdrawer:6.1.2"
 
     //GSON
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
