--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        targetCompatibility = 1.8
+        sourceCompatibility = 1.8
+    }
 }
 
 dependencies {
@@ -36,17 +40,15 @@ dependencies {
     //Support libs
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.annotation:annotation:1.1.0'
-    implementation 'com.google.android.material:material:1.1.0-alpha10'
-
-    //Material Drawer
-    implementation "com.mikepenz:materialdrawer:6.1.2"
 
     //GSON
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.1'
+
+    //OkHttp interceptor
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.2'
 
     //Room
     implementation 'android.arch.persistence.room:runtime:1.1.1'
@@ -57,4 +59,8 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
+
+    //Navigation UI
+    implementation 'androidx.navigation:navigation-fragment:2.1.0'
+    implementation 'androidx.navigation:navigation-ui:2.1.0'
 }
