--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,8 +59,12 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.1'
+    implementation 'android.arch.persistence.room:rxjava2:1.1.1'
 
     //Navigation UI
     implementation 'androidx.navigation:navigation-fragment:2.1.0'
     implementation 'androidx.navigation:navigation-ui:2.1.0'
+
+    //Database debugger
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
 }
