--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,12 @@ dependencies {
 
     //Database debugger
     debugImplementation 'com.amitshekhar.android:debug-db:1.0.4'
+
+    //Lifecycle
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 }
